# ollama-renamer

./: Cargo.toml  README.md  install.bat
src/: main.rs
