[package]
name = "ollama-rename"
version = "0.1.0"
edition = "2021"
description = "Rename Ollama models via interactive cli."
license = "MIT"
categories = ["command-line-utilities"]
repository = "https://example.com/your/repo"              # update if publishing

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.143"
regex = "1.11.2"
anyhow = "1.0.99"
reqwest = { version = "0.12.23", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
console = "0.16.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
